force-app/main/default/objects/Customer_Feedback_Survey__c/Customer_Feedback_Survey__c.object-meta.xml
<CustomObject>
    <label>Customer Feedback Survey</label>
    <nameField>
        <displayFormat>CFS-{00000}</displayFormat>
        <label>Customer Feedback Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Feedback Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>