force-app/main/default/objects/Customer_Feedback_Survey__c/fields/Days_after_Question_1__c.field-meta.xml
<CustomField>
    <fullName>Days_after_Question_1__c</fullName>
    <formula>TODAY() - DATEVALUE(First_Question_Sent__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days after Survey</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>