force-app/main/default/objects/Customer_Feedback_Survey__c/fields/Detractor_1_6_Score__c.field-meta.xml
<CustomField>
    <fullName>Detractor_1_6_Score__c</fullName>
    <formula>IF( TEXT(NPS_Description__c) = &quot;Detractor 1-6&quot;, Survey_Response__c,&quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Detractor 1-6 Score</label>
    <type>Text</type>
</CustomField>