force-app/main/default/objects/Customer_Feedback_Survey__c/fields/Draft_Session_Status__c.field-meta.xml
<CustomField>
    <fullName>Draft_Session_Status__c</fullName>
    <formula>ISPICKVAL(Session__r.enrtcr__Status__c ,&quot;Draft&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Draft Session Status</label>
    <type>Checkbox</type>
</CustomField>