force-app/main/default/objects/Customer_Feedback_Survey__c/fields/First_Question_Sent__c.field-meta.xml
<CustomField>
    <fullName>First_Question_Sent__c</fullName>
    <label>Survey Sent</label>
    <type>DateTime</type>
</CustomField>