force-app/main/default/objects/Customer_Feedback_Survey__c/fields/Opt_out__c.field-meta.xml
<CustomField>
    <fullName>Opt_out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt Out</label>
    <type>Checkbox</type>
</CustomField>