force-app/main/default/objects/Customer_Feedback_Survey__c/fields/Passive_7_8_Score__c.field-meta.xml
<CustomField>
    <fullName>Passive_7_8_Score__c</fullName>
    <formula>IF( TEXT(NPS_Description__c) = &quot;Passive 7-8&quot;, Survey_Response__c , &quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passive 7-8 Score</label>
    <type>Text</type>
</CustomField>