force-app/main/default/objects/Customer_Feedback_Survey__c/fields/Profession__c.field-meta.xml
<CustomField>
    <fullName>Profession__c</fullName>
    <label>Profession</label>
    <length>100</length>
    <type>Text</type>
</CustomField>