force-app/main/default/objects/Customer_Feedback_Survey__c/fields/Promoters_9_10_Score__c.field-meta.xml
<CustomField>
    <fullName>Promoters_9_10_Score__c</fullName>
    <formula>IF( TEXT(NPS_Description__c) = &quot;Promoters 9-10&quot;, Survey_Response__c , &quot;0&quot;)</formula>
    <label>Promoters 9-10 Score</label>
    <type>Text</type>
</CustomField>