force-app/main/default/objects/Customer_Feedback_Survey__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <label>Recipient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Feedback Surveys (Recipient)</relationshipLabel>
    <relationshipName>Customer_Feedback_Surveys</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>