force-app/main/default/objects/Customer_Feedback_Survey__c/fields/Send_First_Question__c.field-meta.xml
<CustomField>
    <fullName>Send_First_Question__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Survey</label>
    <type>Checkbox</type>
</CustomField>