force-app/main/default/objects/Customer_Feedback_Survey__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <label>Session</label>
    <referenceTo>enrtcr__Session__c</referenceTo>
    <relationshipLabel>Customer Feedback Surveys</relationshipLabel>
    <relationshipName>Customer_Feedback_Surveys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>