force-app/main/default/objects/Customer_Feedback_Survey__c/fields/Session_End_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Session_End_Datetime__c</fullName>
    <label>Session End Datetime</label>
    <type>DateTime</type>
</CustomField>