force-app/main/default/objects/Customer_Feedback_Survey__c/fields/Session_Region__c.field-meta.xml
<CustomField>
    <fullName>Session_Region__c</fullName>
    <formula>Session__r.enrtcr__Session_Region__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Region</label>
    <type>Text</type>
</CustomField>