force-app/main/default/objects/Customer_Feedback_Survey__c/fields/Session_Site__c.field-meta.xml
<CustomField>
    <fullName>Session_Site__c</fullName>
    <formula>Session__r.enrtcr__Site__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Site</label>
    <type>Text</type>
</CustomField>