force-app/main/default/objects/Customer_Feedback_Survey__c/fields/Survey_is_Completed__c.field-meta.xml
<CustomField>
    <fullName>Survey_is_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field is True when survey has been completed</description>
    <label>Survey is Completed</label>
    <type>Checkbox</type>
</CustomField>