force-app/main/default/objects/Customer_Feedback_Survey__c/fields/Survey_Response__c.field-meta.xml
<CustomField>
    <fullName>Survey_Response__c</fullName>
    <description>The Survey Recipient score is captured here</description>
    <label>Survey Response</label>
    <length>18</length>
    <type>Text</type>
</CustomField>