force-app/main/default/objects/Customer_Feedback_Survey__c/fields/Unrecognised_Response__c.field-meta.xml
<CustomField>
    <fullName>Unrecognised_Response__c</fullName>
    <label>Unrecognised Response</label>
    <type>DateTime</type>
</CustomField>