force-app/main/default/objects/Customer_Feedback_Survey__c/fields/Worker__c.field-meta.xml
<CustomField>
    <fullName>Worker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Worker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Feedback Surveys (Worker)</relationshipLabel>
    <relationshipName>Customer_Feedback_Surveys1</relationshipName>
    <type>Lookup</type>
</CustomField>