force-app/main/default/objects/Customer_Feedback_Survey__c/fields/Worker_Site__c.field-meta.xml
<CustomField>
    <fullName>Worker_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Worker Site</label>
    <referenceTo>enrtcr__Site__c</referenceTo>
    <relationshipLabel>Customer Feedback Surveys</relationshipLabel>
    <relationshipName>Customer_Feedback_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>