force-app/main/default/objects/Customer_Feedback_Survey__c/fields/Workers_and_Professions__c.field-meta.xml
<CustomField>
    <fullName>Workers_and_Professions__c</fullName>
    <label>Workers and Professions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>