force-app/main/default/objects/Customer_Feedback_Survey__c/recordTypes/Follow_up.recordType-meta.xml
<RecordType>
    <fullName>Follow_up</fullName>
    <active>true</active>
    <label>Follow up</label>
</RecordType>