force-app/main/default/objects/Customer_Feedback_Survey__c/listViews/Copy_of_All.listView-meta.xml
<ListView>
    <fullName>Copy_of_All</fullName>
    <columns>NAME</columns>
    <columns>Session_End_Datetime__c</columns>
    <columns>Session__c</columns>
    <columns>Recipient__c</columns>
    <columns>Workers_and_Professions__c</columns>
    <columns>Session_Site__c</columns>
    <columns>Session_Region__c</columns>
    <columns>Survey_Response__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Session_Region__c</field>
        <operation>equals</operation>
        <value>NSW</value>
    </filters>
    <label>NSW Customer Feedback</label>
</ListView>